Fixed alignment for kpi tables and added pre ban stats table

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -144,6 +144,102 @@ input.filled, .form-control {
     overflow-y: auto;
   }
 
+  table.scrollables {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    position:relative;
+}
+table.scrollables thead {
+    /* head takes the height it requires, 
+    and it's not scaled when table is resized */
+    flex: 0 0 auto;
+    display: block;
+    overflow-y: scroll;
+}
+table.scrollables tbody {
+    /* body takes all the remaining available space */
+    flex: 1 1 auto;
+    display: block;
+    overflow-y: scroll;
+}
+table.scrollables thead {
+   white-space: nowrap;
+}
+
+table.scrollables tr {
+    width: 100%;
+    display: table;
+    table-layout: fixed;
+}
+table.scrollables-aqua thead:before
+{ 
+	position: absolute;
+  right:0em;
+	width: 1.1em;
+	height: 1.2em;
+	content: '';
+  background-color: #4f9293;
+  margin-top: 0em;
+}
+table.scrollables-aqua thead:after
+{ 
+	position: absolute;
+  right:0em;
+	width: 1.1em;
+	height: 1.2em;
+	content: '';
+  background-color: #4f9293;
+  margin-top: -1.2em;
+}
+
+table.scrollables-razz thead:before
+{ 
+	position: absolute;
+  right:0em;
+	width: 1.1em;
+	height: 1.2em;
+	content: '';
+  background-color: #a33867;
+  margin-top: 0em;
+}
+table.scrollables-razz thead:after
+{ 
+	position: absolute;
+  right:0em;
+	width: 1.1em;
+	height: 1.2em;
+	content: '';
+  background-color: #a33867;
+  margin-top: -1.2em;
+}
+
+  table.col1-150 td:first-child,
+  table.col1-150 th:first-child {
+    width: 150px !important; /* or any width you want */
+  }
+
+  table.align-center-except-first th:not(:first-child),
+  table.align-center-except-first td:not(:first-child) {
+    text-align: center;
+  }
+
+  table.col2-150 td:nth-child(2),
+  table.col2-150 th:nth-child(2) {
+    width: 150px !important; /* or any width you want */
+  }
+
+  table.align-center-except-second th:not(:nth-child(2)),
+  table.align-center-except-second td:not(:nth-child(2)) {
+    text-align: center;
+  }
+
+  table.body-200 tbody {
+    /* body takes all the remaining available space */
+    height: 200px;
+  }
+
   .height-300 {
     height: 300px;
   }
